--- a/docker/nginx/prod-cz.conf
+++ b/docker/nginx/prod-cz.conf
@@ -4,15 +4,15 @@ server {
     location / {
         proxy_read_timeout 300s;
         proxy_connect_timeout 75s;
-        proxy_pass https://www.project.cz/;
+        proxy_pass https://www.rodokmennazakazku.cz/;
         proxy_set_header Proxy-Host $proxy_host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Accept-Encoding "";
         proxy_buffering off;
 
-        sub_filter 'https://www.project.cz/' '/';
-        sub_filter 'https://cdn.myshoptet.com/usr/PROJECTID.myshoptet.com/user/documents/mime/' '/';
+        sub_filter 'https://www.rodokmennazakazku.cz/' '/';
+        sub_filter 'https://cdn.myshoptet.com/usr/717698.myshoptet.com/user/documents/mime/' '/';
         sub_filter '/user/documents/mime/script.js' '/dist/script.js?v=$msec';
         sub_filter '/user/documents/mime/style.css' '/dist/style.css?v=$msec';
         sub_filter '/user/documents/mime/src/' '/src/';
@@ -53,15 +53,15 @@ server {
     location / {
         proxy_read_timeout 300s;
         proxy_connect_timeout 75s;
-        proxy_pass https://www.project.cz;
+        proxy_pass https://www.rodokmennazakazku.cz;
         proxy_set_header Proxy-Host $proxy_host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Accept-Encoding "";
         proxy_buffering off;
 
-        sub_filter 'https://www.project.cz/' '/';
-        sub_filter 'https://cdn.myshoptet.com/usr/PROJECTID.myshoptet.com/user/documents/mime/' '/';
+        sub_filter 'https://www.rodokmennazakazku.cz/' '/';
+        sub_filter 'https://cdn.myshoptet.com/usr/717698.myshoptet.com/user/documents/mime/' '/';
         sub_filter '/user/documents/mime/script.js' '/dist/script.js?v=$msec';
         sub_filter '/user/documents/mime/style.css' '/dist/style.css?v=$msec';
         sub_filter '/user/documents/mime/src/' '/src/';
